Use separate local and remote clusters in Presto Connector tests
(cherry-picked from commit: debf766f051e98f998375271b8d38aeb21fa1bd6)